--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f63e361",
+   "id": "56b7e7de",
    "metadata": {},
    "source": [
     "# Pixel Art Upscale\n",
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2504cc87",
+   "execution_count": 4,
+   "id": "320e7c6d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import epx\n",
     "import cv2\n",
     "import numpy as np\n",
     "import utils\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a242ac4",
+   "id": "784ce825",
    "metadata": {},
    "source": [
     "# Option 1: General Image Upscaling \n",
@@ -43,14 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2bba2a",
+   "id": "292f79bc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "671b76fd",
+   "id": "eb8e9e8a",
    "metadata": {},
    "source": [
     "# Option 2: Pixel Art Upscaling Techniques\n",
@@ -61,48 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "945a41f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def epx(image):\n",
-    "    h, w, c = image.shape\n",
-    "    output = np.zeros((2 * h, 2 * w, c), dtype=np.uint8)\n",
-    "    \n",
-    "    for i in range(h):\n",
-    "        for j in range(w):\n",
-    "            # 'p' and its surrounding pixel\n",
-    "            p = image[i, j, :]\n",
-    "            \n",
-    "            a = image[i-1, j, :] if i != 0 else p\n",
-    "            b = image[i, j + 1, :] if j != w - 1 else p \n",
-    "            c = image[i, j - 1, :] if j != 0 else p\n",
-    "            d = image[i + 1, j, :] if i != h - 1 else p\n",
-    "            \n",
-    "            # Default to corresponding pixel\n",
-    "            output[2 * i, 2 * j, :] = p\n",
-    "            output[2 * i + 1, 2 * j, :] = p\n",
-    "            output[2 * i, 2 * j + 1, :] = p\n",
-    "            output[2 * i + 1, 2 * j + 1, :] = p\n",
-    "            \n",
-    "            # Replacement of neighbors\n",
-    "            if np.array_equal(c, a) and not np.array_equal(c, d) and not np.array_equal(a, b):\n",
-    "                output[2 * i, 2 * j, :] = a\n",
-    "            if np.array_equal(a, b) and not np.array_equal(a, c) and not np.array_equal(b, d):\n",
-    "                output[2 * i, 2 * j + 1, :] = b\n",
-    "            if np.array_equal(d, c) and not np.array_equal(d, b) and not np.array_equal(c, a):\n",
-    "                output[2 * i + 1, 2 * j, :] = c\n",
-    "            if np.array_equal(b, d) and not np.array_equal(b, a) and not np.array_equal(d, c):\n",
-    "                output[2 * i + 1, 2 * j + 1, :] = d\n",
-    "    \n",
-    "    return output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "86b81ef0",
+   "execution_count": 5,
+   "id": "e0c5e04f",
    "metadata": {},
    "outputs": [
     {
@@ -122,15 +83,15 @@
     "yoshi_path = 'inputs/yoshi.png'\n",
     "yoshi = cv2.imread(yoshi_path)\n",
     "\n",
-    "yoshi_2x = epx(yoshi)\n",
-    "yoshi_4x = epx(yoshi_2x)\n",
-    "yoshi_8x = epx(yoshi_4x)\n",
+    "yoshi_2x = epx.upsample(yoshi)\n",
+    "yoshi_4x = epx.upsample(yoshi_2x)\n",
+    "yoshi_8x = epx.upsample(yoshi_4x)\n",
     "utils.display_upscales(\"Yoshi\", [yoshi, yoshi_2x, yoshi_4x, yoshi_8x])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08186a73",
+   "id": "27db1b46",
    "metadata": {},
    "source": [
     "# Option 3 Kopf and Lischinski Algorithm\n",
@@ -145,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6860c255",
+   "id": "af3a29a6",
    "metadata": {},
    "outputs": [],
    "source": []
