Base for heuristics for gestalt

--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -175,11 +175,11 @@
     "    return graph\n",
     "\n",
     "# Remove diagonals if the square is fully connected\n",
-    "def remove_fully_connected_diagonals(graph, image): \n",
+    "def remove_diagonals(graph, image): \n",
     "    height, width, _ = image.shape\n",
     "\n",
-    "    for y in range(height):\n",
-    "        for x in range(width):\n",
+    "    for y in range(height - 1):\n",
+    "        for x in range(width - 1):\n",
     "            corners = graph.nodes[(x, y)]['corners']\n",
     "\n",
     "            connections = 0\n",
@@ -190,8 +190,35 @@
     "            \n",
     "            if connections == 6:\n",
     "                graph.remove_edges_from([((x, y), (x + 1, y + 1)), ((x + 1, y), (x, y + 1))])\n",
+    "            elif connections == 2 and graph.has_edge((x, y), (x + 1, y + 1)) and graph.has_edge((x + 1, y), (x, y + 1)):\n",
+    "                remove_diagonal_gestalt((x, y), graph)\n",
     "\n",
     "    return graph\n",
+    "\n",
+    "# Remove a single diagonal if the square contains only diagonal connections\n",
+    "def remove_diagonal_gestalt(node, graph):\n",
+    "    # Weights for diagonals where weights[0] is the weight for (x, y) -> (x + 1, y + 1)\n",
+    "    # and weights[1] is the weight for (x + 1, y) -> (x, y + 1)\n",
+    "    x, y = node\n",
+    "    weights = np.array([0, 0])\n",
+    "    weights += getCurvesScore(node, graph)\n",
+    "    weights += getSparsePixelsScore(node, graph)\n",
+    "    weights += getIslandsScore(node, graph)\n",
+    "    if weights[0] > weights[1]:\n",
+    "        graph.remove_edge((x + 1, y), (x, y + 1))\n",
+    "    elif weights[0] < weights[1]:\n",
+    "        graph.remove_edge((x, y), (x + 1, y + 1))\n",
+    "    else:\n",
+    "        graph.remove_edges_from([((x, y), (x + 1, y + 1)), ((x + 1, y), (x, y + 1))])\n",
+    "\n",
+    "def getCurvesScore(node, graph):\n",
+    "    return \n",
+    "\n",
+    "def getSparsePixelsScore(node, graph):\n",
+    "    return\n",
+    "\n",
+    "def getIslandsScore(node, graph):\n",
+    "    return\n",
     "\n",
     "# Check if the pixels are in equality range according to the Kopf-Lischinski algorithm \n",
     "def color_equals(image, x1, y1, x2, y2):\n",
@@ -203,7 +230,30 @@
     "        return False\n",
     "    if 6.0 / 255.0 < abs(v[y1, x1] - v[y2, x2]):\n",
     "        return False\n",
-    "    return True\n"
+    "    return True\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d06633b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 5])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -245,7 +295,7 @@
     "boo = cv2.imread(boo_file)\n",
     "\n",
     "graph = create_similarity_graph(boo)\n",
-    "graph = remove_fully_connected_diagonals(graph, boo)\n",
+    "graph = remove_diagonals(graph, boo)\n",
     "\n",
     "networkx.draw_networkx(graph)\n"
    ]
