--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -204,6 +204,7 @@
     "    weights += getCurvesScore(node, graph)\n",
     "    weights += getSparsePixelsScore(node, graph)\n",
     "    weights += getIslandsScore(node, graph)\n",
+    "\n",
     "    if weights[0] > weights[1]:\n",
     "        graph.remove_edge((x + 1, y), (x, y + 1))\n",
     "    elif weights[0] < weights[1]:\n",
@@ -218,7 +219,19 @@
     "    return\n",
     "\n",
     "def getIslandsScore(node, graph):\n",
-    "    return\n",
+    "    x, y = node\n",
+    "    weight = np.array([0, 0])\n",
+    "\n",
+    "    if len(graph.edges((x, y))) == 1:\n",
+    "        weight[0] += 5\n",
+    "    if len(graph.edges((x + 1, y + 1))) == 1:\n",
+    "        weight[0] += 5\n",
+    "    if len(graph.edges((x + 1, y))) == 1:\n",
+    "        weight[1] += 5\n",
+    "    if len(graph.edges((x, y + 1))) == 1:\n",
+    "        weight[1] += 5\n",
+    "\n",
+    "    return weight\n",
     "\n",
     "# Check if the pixels are in equality range according to the Kopf-Lischinski algorithm \n",
     "def color_equals(image, x1, y1, x2, y2):\n",
