Correct island score hopefully

--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -222,13 +222,9 @@
     "    x, y = node\n",
     "    weight = np.array([0, 0])\n",
     "\n",
-    "    if len(graph.edges((x, y))) == 1:\n",
+    "    if len(graph.edges((x, y))) == 1 or len(graph.edges((x + 1, y + 1))) == 1:\n",
     "        weight[0] += 5\n",
-    "    if len(graph.edges((x + 1, y + 1))) == 1:\n",
-    "        weight[0] += 5\n",
-    "    if len(graph.edges((x + 1, y))) == 1:\n",
-    "        weight[1] += 5\n",
-    "    if len(graph.edges((x, y + 1))) == 1:\n",
+    "    if len(graph.edges((x + 1, y))) == 1 or len(graph.edges((x, y + 1))) == 1:\n",
     "        weight[1] += 5\n",
     "\n",
     "    return weight\n",
