Finished implementing voronoi

--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -7,11 +7,12 @@
    "metadata": {},
    "source": [
     "# Pixel Art Upscale\n",
-    "Graphics in past video games were represented at the pixel level. This form of digital art is known as pixel art. This artwork was usually arranged by hand at the pixel level because of the hardware constraints at the time–this is opposed to the standard now of doscaling the high-resolution images. \n",
     "\n",
-    "We will be attempting to upscaling some iconic pixel art such as mario characters and other classic video game characters. We will start with some older implementation methods that have limitations on the magnification factor and we will finish with the most refined implementation developed by **Johannes Kopf and Dani Lischinski**. \n",
+    "Graphics in past video games were represented at the pixel level. This form of digital art is known as pixel art. This artwork was usually arranged by hand at the pixel level because of the hardware constraints at the time–this is opposed to the standard now of doscaling the high-resolution images.\n",
     "\n",
-    "The implementation by Kopf and Lischinski is most definitely the most advanced algorithm of the 3 that we are attempting to implement. Part of the difficulty is that we do not know what heuristics they are using so we will have to experiment with these numbers on are own. Additionally, have a low number of linear transformations needed, opposed to Kopf and Lischinski's which will require us to reshape the pixels, produce a Voroni graph, initialize spline curves, optimize the spline curves for control points, and render the image based off pixel-color averages."
+    "We will be attempting to upscaling some iconic pixel art such as mario characters and other classic video game characters. We will start with some older implementation methods that have limitations on the magnification factor and we will finish with the most refined implementation developed by **Johannes Kopf and Dani Lischinski**.\n",
+    "\n",
+    "The implementation by Kopf and Lischinski is most definitely the most advanced algorithm of the 3 that we are attempting to implement. Part of the difficulty is that we do not know what heuristics they are using so we will have to experiment with these numbers on are own. Additionally, have a low number of linear transformations needed, opposed to Kopf and Lischinski's which will require us to reshape the pixels, produce a Voroni graph, initialize spline curves, optimize the spline curves for control points, and render the image based off pixel-color averages.\n"
    ]
   },
   {
@@ -20,14 +21,18 @@
    "id": "8f6e7951",
    "metadata": {},
    "source": [
-    "# Install packages"
+    "# Install packages\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b7d78d51",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -36,9 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5ab127f2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "from epx import *\n",
@@ -47,6 +56,7 @@
     "import numpy as np\n",
     "from similarityGraph import *\n",
     "from utils import * \n",
+    "import networkx as nx\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -57,15 +67,20 @@
    "id": "dc923bc4",
    "metadata": {},
    "source": [
-    "# Option 1: Bicubic Upscaling \n",
-    "Apply linear filtering to upsample images"
+    "# Option 1: Bicubic Upscaling\n",
+    "\n",
+    "Apply linear filtering to upsample images\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4babd66d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -76,19 +91,25 @@
    "metadata": {},
    "source": [
     "# Option 2: Pixel Art Upscaling Techniques\n",
+    "\n",
     "Emulation technique that is based on a fixed integer factor EPX.\n",
     "\n",
     "EPX is a naive solution that increases the resolution of an image by a factor of two using a straightforward approach. At the beginning, every pixel in the original image is replaced by a 2x2 block of pixels with the same color. However, if the adjacent pixels to the left and above the current pixel in the original image have the same color, that color is used to replace the top-left pixel in the 2x2 block. The same logic applies to the other three corners of the block. There are a few more additional constraints that deal with not doing replacement if 3 of the surrounding pixels are equivalent.\n",
     "\n",
     "Further Detailing on Algorithm:\n",
-    "- https://en.wikipedia.org/wiki/Pixel-art_scaling_algorithms#:~:text=Eric's%20Pixel%20Expansion%20(EPX)%20is,or%20less%20double%20that%20resolution."
+    "\n",
+    "- https://en.wikipedia.org/wiki/Pixel-art_scaling_algorithms#:~:text=Eric's%20Pixel%20Expansion%20(EPX)%20is,or%20less%20double%20that%20resolution.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9766f711",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -120,7 +141,9 @@
    "metadata": {},
    "source": [
     "# Option 3 Kopf and Lischinski Algorithm\n",
+    "\n",
     "Milestone steps to upscale 8-bit pixel art vectors:\n",
+    "\n",
     "- Milestone 1: Reshaping the pixels using the heuristics to make sure that they are grouped with their neighbors by creating a similarity graph\n",
     "- Milestone 2: Create a simplified Voronoi graph from a similarity graph\n",
     "- Milestone 3: Initializing spline curves from the Voronoi graph\n",
@@ -130,11 +153,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "id": "470f4c6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[], [], [], [], [], []], [[], [], [], [], [], []], [[], [], [], [], [], []], [[], [], [], [], [], []]]\n",
+      "(0, 0)\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 3)\n",
+      "(0, 4)\n",
+      "(0, 5)\n",
+      "(1, 0)\n",
+      "(1, 1)\n",
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(1, 4)\n",
+      "(1, 5)\n",
+      "(2, 0)\n",
+      "(2, 1)\n",
+      "(2, 2)\n",
+      "(2, 3)\n",
+      "(2, 4)\n",
+      "(2, 5)\n",
+      "(3, 0)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(3, 3)\n",
+      "(3, 4)\n",
+      "(3, 5)\n",
+      "{(0.0, 0.0): 2, (0.0, 0.5): 2, (0.0, 1.0): 4, (0.5, 1.0): 4, (0.75, 1.25): 4, (1.25, 0.75): 4, (1.0, 1.0): 6, (1.0, 0.5): 4, (1.0, 0.0): 4, (0.5, 0.0): 2, (0.0, 1.5): 2, (0.0, 2.0): 4, (0.5, 2.0): 4, (1.0, 2.0): 8, (1.0, 1.5): 4, (0.0, 2.5): 2, (0.0, 3.0): 4, (0.5, 3.0): 4, (1.0, 3.0): 6, (1.0, 2.5): 4, (0.0, 3.5): 2, (0.0, 4.0): 4, (0.5, 4.0): 4, (1.0, 4.0): 4, (1.0, 3.5): 4, (0.0, 4.5): 2, (0.0, 5.0): 4, (0.5, 5.0): 4, (1.0, 5.0): 4, (1.0, 4.5): 4, (0.0, 5.5): 2, (0.0, 6.0): 2, (0.5, 6.0): 2, (1.0, 6.0): 4, (1.0, 5.5): 4, (1.5, 1.0): 4, (2.0, 1.0): 8, (2.0, 0.5): 4, (2.0, 0.0): 4, (1.5, 0.0): 2, (1.5, 2.0): 4, (2.0, 2.0): 6, (2.0, 1.5): 4, (0.75, 2.75): 2, (1.25, 3.25): 2, (1.5, 3.0): 4, (2.0, 3.0): 4, (2.0, 2.5): 4, (2.25, 2.25): 2, (1.75, 1.75): 2, (0.75, 3.75): 2, (1.25, 4.25): 2, (1.5, 4.0): 4, (2.0, 4.0): 2, (2.0, 3.5): 4, (2.25, 3.25): 2, (1.75, 2.75): 2, (1.25, 3.75): 2, (0.75, 4.25): 2, (0.75, 4.75): 2, (1.25, 5.25): 2, (1.5, 5.0): 4, (2.0, 5.0): 4, (2.0, 4.5): 4, (2.25, 4.25): 4, (1.75, 3.75): 4, (1.25, 4.75): 2, (0.75, 5.25): 2, (1.5, 6.0): 2, (2.0, 6.0): 4, (2.0, 5.5): 4, (2.5, 1.0): 4, (3.0, 1.0): 6, (3.0, 0.5): 4, (3.0, 0.0): 4, (2.5, 0.0): 2, (2.5, 2.0): 4, (3.0, 2.0): 8, (3.0, 1.5): 4, (2.5, 3.0): 4, (3.0, 3.0): 6, (3.0, 2.5): 4, (2.25, 2.75): 2, (1.75, 3.25): 2, (2.5, 4.0): 4, (3.0, 4.0): 6, (3.0, 3.5): 4, (3.25, 3.25): 2, (2.75, 2.75): 2, (2.25, 3.75): 2, (1.75, 4.25): 2, (1.75, 4.75): 2, (2.25, 5.25): 2, (2.5, 5.0): 4, (3.0, 5.0): 6, (3.0, 4.5): 4, (3.25, 4.25): 2, (2.75, 3.75): 2, (2.25, 4.75): 2, (1.75, 5.25): 2, (2.5, 6.0): 2, (3.0, 6.0): 4, (3.0, 5.5): 4, (2.75, 0.75): 2, (3.25, 1.25): 2, (3.5, 1.0): 4, (4.0, 1.0): 4, (4.0, 0.5): 2, (4.25, 0.25): 2, (3.75, -0.25): 2, (3.5, 0.0): 2, (3.5, 2.0): 4, (4.0, 2.0): 4, (4.0, 1.5): 2, (3.5, 3.0): 4, (4.0, 3.0): 4, (4.0, 2.5): 2, (3.5, 4.0): 4, (4.0, 4.0): 4, (4.0, 3.5): 2, (3.5, 5.0): 4, (4.0, 5.0): 4, (4.0, 4.5): 2, (3.25, 4.75): 2, (2.75, 5.25): 2, (3.5, 6.0): 2, (4.0, 6.0): 2, (4.0, 5.5): 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def createRegions(graph, image):\n",
+    "\theight, width = image[ :, :, 0].shape\n",
+    "\tvoronoiPts = [[[] for j in range(height)] for j in range(width)]\n",
+    "\tprint(voronoiPts)\n",
+    "\t# print(voronoiPts[height - 1][width - 1])\n",
+    "\t\n",
+    "\t# float xcenter, ycenter;\n",
+    "\tfor x in range(width):\n",
+    "\t\tfor y in range(height):\n",
+    "\t\t\tpixel = (x, y)\n",
+    "\t\t\txcenter = x + 0.5\n",
+    "\t\t\tycenter = y + 0.5\n",
+    "\t\t\tprint(pixel)\n",
+    "\n",
+    "            # TOPLEFT\n",
+    "\t\t\tif(graph.has_edge(pixel, (pixel[0] -1, pixel[1] - 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.25, ycenter - 0.75)) # 1\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.75, ycenter - 0.25)) # 2\n",
+    "\t\t\telif (graph.has_edge((pixel[0], pixel[1] - 1), (pixel[0] - 1, pixel[1] + 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.25, ycenter - 0.25)) # 3\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.5, ycenter - 0.5)) # 4\n",
+    "\n",
+    "\t\t    # LEFT\n",
+    "\t\t\tvoronoiPts[x][y].append((xcenter - 0.5, ycenter)) # Mid-point\n",
+    "\n",
+    "\t\t\t# BOTTOMLEFT\n",
+    "\t\t\tif (graph.has_edge(pixel,(pixel[0] - 1, pixel[1] + 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.75, ycenter + 0.25)) # 1\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.25, ycenter + 0.75)) # 2\n",
+    "\t\t\telif (graph.has_edge((pixel[0], pixel[1] + 1), (pixel[0] -1, pixel[1] - 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.25, ycenter + 0.25)) # 3\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter - 0.5, ycenter + 0.5)) # 4\n",
+    "\n",
+    "\t\t\t# BOTTOM\n",
+    "\t\t\tvoronoiPts[x][y].append((xcenter, ycenter + 0.5)) # Mid-point\n",
+    "\n",
+    "            # BOTTOMRIGHT\n",
+    "\t\t\tif(graph.has_edge(pixel, (pixel[0] + 1, pixel[0] + 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.25, ycenter + 0.75)) # 1\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.75, ycenter + 0.25)) # 2\n",
+    "\t\t\tif(graph.has_edge((pixel[0], pixel[1] + 1),(pixel[0] + 1, pixel[1] - 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.25, ycenter + 0.25)) # 3\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.5, ycenter + 0.5)) # 4\n",
+    "\n",
+    "            # RIGHT\n",
+    "\t\t\tvoronoiPts[x][y].append((xcenter + 0.5, ycenter)) # Mid-point\n",
+    "\n",
+    "            # TOPRIGHT\n",
+    "\t\t\tif(graph.has_edge(pixel, (pixel[0] -1, pixel[1] + 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.75, ycenter - 0.25)) # 1\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.25, ycenter - 0.75)) # 2\n",
+    "\t\t\telif(graph.has_edge((pixel[0], pixel[1] - 1), (pixel[0] + 1, pixel[1] + 1))):\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.25, ycenter - 0.25)) # 3\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tvoronoiPts[x][y].append((xcenter + 0.5, ycenter - 0.5)) # 4\n",
+    "\n",
+    "            # TOP\n",
+    "\t\t\tvoronoiPts[x][y].append((xcenter, ycenter - 0.5)) # Mid-point\n",
+    "\treturn voronoiPts\n",
+    "\n",
+    "def collapseValence(voronoiPts, width, height):\n",
+    "\tvalency = {}\n",
+    "\tfor x in range(width):\n",
+    "\t\tfor y in range(height):\n",
+    "\t\t\tfor i in range(len(voronoiPts[x][y])):\n",
+    "\t\t\t\tl = i\n",
+    "\t\t\t\tr = (i+1)%(len(voronoiPts[x][y]))\n",
+    "\t\t\t\tif (valency.get(voronoiPts[x][y][l])):\n",
+    "\t\t\t\t\t\tvalency[voronoiPts[x][y][l]] += 1\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tvalency[voronoiPts[x][y][l]] = 1\n",
+    "\n",
+    "\t\t\t\tif(valency.get(voronoiPts[x][y][r])):\n",
+    "\t\t\t\t\t\tvalency[voronoiPts[x][y][r]] += 1\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tvalency[voronoiPts[x][y][r]] = 1;\n",
+    "\n",
+    "\tfor x in range(width):\n",
+    "\t\tfor y in range(height):\n",
+    "\t\t\ttemp = [];\n",
+    "\t\t\tfor i in range(len(voronoiPts[x][y])):\n",
+    "\t\t\t\tif(valency[voronoiPts[x][y][i]] != 4 or onBoundary(voronoiPts[x][y][i], height, width)):\n",
+    "\t\t\t\t\ttemp.append(voronoiPts[x][y][i])\n",
+    "\t\t\tvoronoiPts[x][y].clear()\n",
+    "\t\t\tvoronoiPts[x][y] = temp\n",
+    "\treturn valency\n",
+    "def onBoundary(point, height, width):\n",
+    "\treturn point[0] == 0 or point[0] == width or point[1] == 0 or point[1] == height\n",
+    "\n",
+    "\n",
+    "boo_arm_file = './inputs/boo_arm.png'\n",
+    "boo_arm = cv2.imread(boo_arm_file)\n",
+    "height, width = boo_arm[:, :, 0].shape\n",
+    "graph = create_similarity_graph(boo_arm)\n",
+    "graph = remove_diagonals(graph, boo_arm)\n",
+    "voronoiRegions = createRegions(graph, boo_arm)\n",
+    "voronoiRegions = collapseValence(voronoiRegions, width, height)\n",
+    "print(voronoiRegions)"
+   ]
   },
   {
    "attachments": {},
@@ -142,7 +304,7 @@
    "id": "e97d3073",
    "metadata": {},
    "source": [
-    "# Run all the helpers"
+    "# Run all the helpers\n"
    ]
   }
  ],
@@ -151,18 +313,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
