Add general upscaling techniques to ipynb and requirements file

--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -49,18 +49,49 @@
    "id": "dc923bc4",
    "metadata": {},
    "source": [
-    "# Option 1: Bicubic Upscaling\n",
+    "# Option 1: General Upscaling Techniques\n",
     "\n",
-    "Apply linear filtering to upsample images\n"
+    "Apply linear filtering to upsample images\n",
+    "\n",
+    "\n",
+    "The “classical” approach to image upsampling is to apply linear filters derived either from analytical interpolation or from signal processing theory. Examples include filters such as Nearest-Neighbor, Bicubic, and Lancosz [Wolberg 1990]. These filters make no assumptions about the underlying data, other than that it is essentially band-limited. As a consequence, images upsampled in this manner typically suffer from blurring of sharp edges and ringing artifacts. Here we implement two general upscaling techniques including Nearest-Nieghbor and Bilinear.\n",
+    "\n",
+    "Further Detailing on Algorithms:\n",
+    "- https://en.wikipedia.org/wiki/Nearest-neighbor_interpolation\n",
+    "- https://en.wikipedia.org/wiki/Bilinear_interpolation\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4babd66d",
+   "id": "0d87520e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mushroom_path = 'inputs/1up.png'\n",
+    "mushroom = cv2.imread(mushroom_path)\n",
+    "\n",
+    "mushroom_2x = nearestNeighborsInterpolation(mushroom, 2)\n",
+    "mushroom_4x = nearestNeighborsInterpolation(mushroom, 4)\n",
+    "mushroom_8x = nearestNeighborsInterpolation(mushroom, 8)\n",
+    "display_upscales(\"Mushroom\", [mushroom, mushroom_2x, mushroom_4x, mushroom_8x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d489a01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peach_path = 'inputs/peach.png'\n",
+    "peach = cv2.imread(peach_path)\n",
+    "\n",
+    "peach_2x = bilinearInterpolation(peach, 2)\n",
+    "peach_4x = bilinearInterpolation(peach, 4)\n",
+    "peach_8x = bilinearInterpolation(peach, 8)\n",
+    "display_upscales(\"Peach\", [peach, peach_2x, peach_4x, peach_8x])"
+   ]
   },
   {
    "attachments": {},
