Removed unused code

--- a/Upscale.ipynb
+++ b/Upscale.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "point_to_region = get_region_point_indices(vor)\n",
     "\n",
-    "segments = get_segments(width, height, vor, graph, point_to_region)\n",
+    "graph_voronoi(width, height, vor, graph, point_to_region)\n",
     "segments = get_collapsed_segments(graph, vor, point_to_region, width, height)\n"
    ]
   },
